@@ -996,8 +996,6 @@
 	'S_VALUES_STORED'=>			'Values stored',
 	'S_NUMBER_OF_TRENDS_STORED'=>		'Number of trends stored',
 	'S_TRENDS_STORED'=>			'Trends stored',
-	'S_NUMBER_OF_EVENTS'=>			'Number of events',
-	'S_NUMBER_OF_ALERTS'=>			'Number of alerts',
 	'S_NUMBER_OF_TRIGGERS'=>		'Number of triggers (enabled/disabled)[true/unknown/false]',
 	'S_NUMBER_OF_TRIGGERS_SHORT'=>		'Triggers (e/d)[t/u/f]',
 	'S_NUMBER_OF_ITEMS'=>			'Number of items (monitored/disabled/not supported)[trapper]',
@@ -1006,6 +1004,7 @@
 	'S_NUMBER_OF_USERS_SHORT'=>		'Users (online)',
 	'S_NUMBER_OF_HOSTS'=>			'Number of hosts (monitored/not monitored/templates/deleted)',
 	'S_NUMBER_OF_HOSTS_SHORT'=>		'Hosts (m/n/t/d)',
+	'S_REQUIRED_SERVER_PERFORMANCE_NVPS'=>	'Required server performance, new values per second',
 	'S_YES'=>				'Yes',
 	'S_NO'=>				'No',
 	'S_RUNNING'=>				'running',
